--- a/ssm-parent/hhxx-Salary/src/main/resources/templates/salary/adminSalarySearch.html
+++ b/ssm-parent/hhxx-Salary/src/main/resources/templates/salary/adminSalarySearch.html
@@ -1,163 +1,16 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Frameset//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-frameset.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<link href="../css/style.css" rel="stylesheet" type="text/css" />
-		<script type="text/javascript" src="../js/jquery-1.8.3.min.js"></script>
-		<script>
-
-		$(function(){
-
-			var url = "${pageContext.request.contextPath}/deptName";
-			$.post(
-				url,
-				{"method":"json","time":new Date()},
-				function(data){
-					$(data).each(function(index,deptName){
-						$("#deptName").append(
-							"<option value="+(index+1)+">"+dept.name+"</option>"
-						);
-					});
-				},
-				"json"
-			);
-
-
-		});
-		</script>
-	<style>
-		#div1, #div2, #div3, #div4, #div5, #div6, #div7, #div8{
-			weight:250px;
-			height:70px;
-    	    float: left;
-    	    display: table-cell;
-    		vertical-align: middle;
-    		text-align: center;
-		}
-	</style>
-	</head>
-
-	<body>
-
-		<div class="place">
-			<span>位置:</span>
-			<ul class="placeul">
-				<li>
-					<a href="#">薪资管理</a>
-				</li>
-				<li>
-					<a href="#">薪资查询</a>
-				</li>
-			</ul>
-		</div>
-
-		<div class="rightinfo">
-
-			<div class="tools" style="background-color: #949494;">
-
-				<div id="div1"  style="background-color: darkcyan;">
-					<label  for="queryDepartmentName">部门名称</label>
-					<select id="deptName" name="deptName"></select>
-				</div>
-				<div id="div2" style="background-color: darkcyan;">
-					<label  for="queryPositionName">职位名称</label>
-					<select id="positionName" name="positionName"></select>
-				</div>
-				<div id="div3"  style="background-color: darkcyan;">
-					<label  for="queryEmployeeName">员工名</label>
-					<input id="employeeName" type="text" />
-				</div>
-				<div id="div4"  style="background-color: darkcyan;">
-					<label  for="queryEmployeeId">员工ID</label>
-					<input id="employeeId" type="text" />
-				</div>
-				<div id="div5"  style="background-color: darkcyan;">
-					<label  for="queryEmployeeId">查询年份</label>
-					<input id="employeeId" type="text" />
-				</div>
-				<div id="div6"  style="background-color: darkcyan;">
-					<label  for="queryEmployeeId">起始月份</label>
-					<input id="employeeId" type="text" />
-				</div>
-				<div id="div7" style="background-color: darkcyan;">
-					<label  for="queryEmployeeId">截止月份</label>
-					<input id="employeeId" type="text" />
-				</div>
-				<div id="div8" class="queryform">
-				<input type="button" class="querybtn" value="查询"/>
-				</div>
-			</div>
-
-			<table class="tablelist">
-				<thead>
-					<tr>
-						<th><input name="" type="checkbox" value="" checked="checked" /></th>
-						<th>序号</th>
-						<th>标题</th>
-						<th>用户</th>
-						<th>籍贯</th>
-						<th>发布时间</th>
-						<th>是否审核</th>
-						<th>操作</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<td><input name="" type="checkbox" value="" /></td>
-						<td>20130908</td>
-						<td>王金平幕僚：马英九声明字字见血 人活着没意思</td>
-						<td>admin</td>
-						<td>江苏南京</td>
-						<td>2013-09-09 15:05</td>
-						<td>已审核</td>
-						<td>
-							<a href="#" class="tablelink">查看</a>
-							<a href="#" class="tablelink"> 删除</a>
-						</td>
-					</tr>
-				</tbody>
-			</table>
-
-			<div class="pagin">
-				<div class="message">共<i class="blue">1256</i>条记录，当前显示第&nbsp;<i class="blue">2&nbsp;</i>页</div>
-				<ul class="paginList">
-					<li class="paginItem">
-						<a href="javascript:;"><span class="pagepre"></span></a>
-					</li>
-					<li class="paginItem">
-						<a href="javascript:;">1</a>
-					</li>
-					<li class="paginItem current">
-						<a href="javascript:;">2</a>
-					</li>
-					<li class="paginItem">
-						<a href="javascript:;">3</a>
-					</li>
-					<li class="paginItem">
-						<a href="javascript:;">4</a>
-					</li>
-					<li class="paginItem">
-						<a href="javascript:;">5</a>
-					</li>
-					<li class="paginItem more">
-						<a href="javascript:;">...</a>
-					</li>
-					<li class="paginItem">
-						<a href="javascript:;">10</a>
-					</li>
-					<li class="paginItem">
-						<a href="javascript:;"><span class="pagenxt"></span></a>
-					</li>
-				</ul>
-			</div>
-
-		</div>
-
-		<script type="text/javascript">
-			$('.tablelist tbody tr:odd').addClass('odd');
-		</script>
-
-	</body>
-
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>员工信息管理系统</title>
+</head>
+<frameset rows="88,*" cols="*" frameborder="no" border="0" framespacing="0">
+  <frame src="top" name="topFrame" scrolling="No" noresize="noresize" id="topFrame" title="topFrame" />
+  <frameset cols="187,*" frameborder="no" border="0" framespacing="0">
+    <frame src="adminLeft" name="leftFrame" scrolling="No" noresize="noresize" id="leftFrame" title="leftFrame" />
+    <frame src="index" name="rightFrame" id="rightFrame" title="rightFrame" />
+  </frameset>
+</frameset>
+<noframes><body>
+</body></noframes>
 </html>
