--- a/ssm-parent/hhxx-Salary/src/main/resources/templates/salary/adminList.html
+++ b/ssm-parent/hhxx-Salary/src/main/resources/templates/salary/adminList.html
@@ -14,10 +14,10 @@
 			<span>位置:</span>
 			<ul class="placeul">
 				<li>
-					<a href="#">部门管理</a>
+					<a href="#">薪资管理</a>
 				</li>
 				<li>
-					<a href="#">部门列表</a>
+					<a href="#">薪资查询</a>
 				</li>
 			</ul>
 		</div>
