--- a/ssm-parent/hhxx-Salary/src/main/resources/templates/salary/empList.html
+++ b/ssm-parent/hhxx-Salary/src/main/resources/templates/salary/empList.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<link href="../css/style.css" rel="stylesheet" type="text/css" />
-		<script type="text/javascript" src="../js/jquery.js"></script>
+		<script type="text/javascript" src="../js/jquery-1.8.3.min.js"></script>
 
 	</head>
 
