--- a/ssm-parent/hhxx-Salary/src/main/resources/templates/salary/adminList.html
+++ b/ssm-parent/hhxx-Salary/src/main/resources/templates/salary/adminList.html
@@ -31,7 +31,7 @@
 				function(data){
 					$(data).each(function(index,positionList){
 						$("#positionId").append(
-							"<option value="+position.id+">"+position.name+"</option>"
+							"<option value="+positionList.id+">"+positionList.name+"</option>"
 						);
 					});
 				},
